kubernetes/l7mp/kernel_tcp/miscs.yaml
apiVersion: l7mp.io/v1
kind: VirtualService
metadata:
  name: ingress-controller-listener
spec:
  selector:
    matchLabels:
      app: l7mp-ingress
  listener:
    spec:
      TCP:
        port: 22222
    rules:
      - action:
          route:
            destinationRef: /l7mp.io/v1/Target/default/ingress-controller-target
---
apiVersion: l7mp.io/v1
kind: VirtualService
metadata:
  name: worker-ng-listener
spec:
  selector:
    matchLabels:
      app: l7mp-worker
  listener:
    spec:
      TCP:
        port: 22220
    rules:
      - action:
          route:
            destinationRef: /l7mp.io/v1/Target/default/worker-ng-target
